--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -23,6 +23,8 @@
     {% # Social, title, etc. %}
     {% render 'meta-tags' %}
 
+    <script src="{{ 'alpinejs_cdn.min.js' | asset_url }}" defer></script>
+
     {{ content_for_header }}
   </head>
 
