--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,1 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 @import "tailwindcss";
+
+body {
+  font-family: 'Oswald', sans-serif;
+}
+
+header,
+header * {
+  font-family: 'Inter', sans-serif;
+}
