--- a/sections/image-trio.liquid
+++ b/sections/image-trio.liquid
@@ -16,7 +16,7 @@
   if section.settings.full_width
     assign container_class = 'w-full px-4'
   else
-    assign container_class = 'container mx-auto px-4 max-w-7xl'
+    assign container_class = 'container mx-auto px-4 max-w-site'
   endif
 -%}
 
