--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -142,7 +142,7 @@
   <div class="relative bg-[#3a4a58] py-12 text-center">
     <span class="absolute left-1/2 top-0 -translate-x-1/2 -translate-y-1/2 p-2 rounded-full">
       {% if section.settings.footer_logo %}
-        {{ section.settings.footer_logo | image_url: width: 40 | image_tag: class: 'max-w-[30px]', loading: 'lazy' }}
+        {{ section.settings.footer_logo | image_url: width: 40 | image_tag: class: 'max-w-[3`0px]', loading: 'lazy' }}
       {% else %}
         <!-- Default Logo Placeholder -->
         <svg class="w-5 h-5" viewBox="0 0 40 50"><path d="M20 0C20 0 5 18 5 30C5 42 12 50 20 50C28 50 35 42 35 30C35 18 20 0 20 0Z" fill="#e85a3c"/></svg>
